--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 
     <header class="siteheader">
         <div class="container">
-            <p itemprop="name"><a href="~/" itemprop="url">@manifest.Name</a></p>
+            <p itemprop="name"><a href="~/" itemprop="url">@settings.Value.DisplayName</a></p>
             By <span itemprop="author">@settings.Value.Owner</span>
         </div>
     </header>
